--- a/chef/cookbooks/java_app/templates/default/nginx.java_app.erb
+++ b/chef/cookbooks/java_app/templates/default/nginx.java_app.erb
@@ -1,6 +1,6 @@
 server {
     location / {
-        proxy_pass http://localhost:8080/;
+        proxy_pass http://localhost:8080;
     }
 
     location ~ \.(gif|jpg|png)$ {
